--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "private": true,
   "dependencies": {
     "@abacritt/angularx-social-login": "^2.2.0",
-    "@angular/animations": "^17.1.0",
     "@angular/cdk": "^17.1.0",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
@@ -22,10 +21,13 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@microsoft/signalr": "^8.0.0",
     "@splidejs/splide": "^4.1.4",
     "bootstrap": "^5.3.3",
+    "ng-angular-popup": "^0.5.2",
     "ngx-lightbox": "^3.0.0",
     "ngx-splide": "^2.0.2",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
